dia01a/volume/deploy-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deploy-statefulset
  namespace: dia01a
spec:
  serviceName: "deploy-statefulset"
  replicas: 3
  selector:
    matchLabels:
      app: deploy-statefulset
  template:
    metadata:
      labels:
        app: deploy-statefulset
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
