dia01a/volume/primeiro-hostpath-directory.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deploy-hostpath-directory
  name: deploy-hostpath-directory
  namespace: dia01a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-hostpath-directory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deploy-hostpath-directory
    spec:
      volumes:
      - name: primeiro-hostpath-directory
        hostPath:
          path: /home/vagrant/dia01a/primeiro-hostpath
          type: Directory
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: primeiro-hostpath-directory
          mountPath: /app
status: {}
