dia01a/volume/primeiro-longhorn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: primeiro-longhorn
  name: primeiro-longhorn
  namespace: dia01a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: primeiro-longhorn
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: primeiro-longhorn
    spec:
      volumes:
      - name: longhorn
        persistentVolumeClaim:
          claimName: pvc-longhorn
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: longhorn
          mountPath: /app
status: {}
