dia01a/volume/primeiro-nfs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: primeiro-nfs-ingress
  namespace: dia01a
spec:
  ingressClassName: nginx
  rules:
  - host: primeiro-nfs.local.lab
    http:
      paths:
      - backend:
          service:
            name: primeiro-nfs-svc
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - primeiro-nfs.local.lab
    secretName: default-tls        
status:
  loadBalancer: {}
